fix alignment of icon and title

--- a/src/options/components/navigation/styles.css
+++ b/src/options/components/navigation/styles.css
@@ -40,7 +40,7 @@
     float: left;
     margin: 0 10px;
     font-size: 18px;
-    padding: 10px 0px;
+    padding: 12px 0 10px 0;
 }
 
 .navItem {
